# venus-map

./: index.html  package-lock.json  package.json
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: empty.json
src/components/: DescriptionSide.vue  MapReset.vue  RobotStatus.vue  StatusIndicators.vue
src/middleware/: connections.js
src/middleware/controls/: robotBehaviour.js  robotControls.js
src/middleware/graphics/: futuristicMap.js  threeInit.js
src/plugins/: posthog.js
