[package]
name = "venus-map"
version = "1.2.0"
description = "Render application for the 5EID0 challenge"
authors = ["Robert Lazar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = ["shell-open", "system-tray"] }
tokio = "1.37.0"
tempfile = "3.10.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
